# bitdecoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: TranslatorLogic.h
src/: TranslatorLogic.cpp  main.cpp
